--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,8 @@ elixir:
 otp_release:
   - 18.2
   - 18.3
-  - 19.0
+  # - 19.0
+
+after_script:
+  - mix deps.get --only docs
+  - MIX_ENV=docs mix inch.report
