--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,22 @@ language: elixir
 sudo: false
 
 elixir:
-  - 1.3.4
-  - 1.4.2
+  - 1.3
+  - 1.4
+  - 1.5
+  - 1.6
 
 otp_release:
   - 18.3
   - 19.3
+  - 20.3
+
+matrix:
+  exclude:
+    - elixir: 1.3
+      otp_release: 20.3
+    - elixir: 1.4
+      otp_release: 20.3
 
 after_script:
   - mix deps.get --only docs
